[package]
name = "live_cell_mpt_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trie = { package = "cita_trie", version = "4.0" }
ckb-types = ">=0.10"
hasher = "0.1"

rust-crypto = "^0.2"
bincode = "1.3.2"
rustc-serialize = "0.3.19"
rand = "0.8.4"
serde = "1.0.151"

clippy = {version = "*", optional = true}